--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <p>Huh This is me... Okay Im Zubair. Im also a beginner.. Pray for me so I can reach my destination.. </p>
 
     <strong>click on Image to go My facebook Profile</strong> <br>
-    <a href=" https://www.facebook.com/zubair.mahmud.5872/ " target="blank"> <img src=" https://scontent.fcgp3-1.fna.fbcdn.net/v/t39.30808-6/269790683_619649315957115_2607910150669343931_n.jpg?_nc_cat=101&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=FCWpSD36b48AX9FB6IH&_nc_ht=scontent.fcgp3-1.fna&oh=00_AT_qdwh7Hj0j-3zlw6ZchoAamoggAEerYTiJEoeTZBvszQ&oe=61DF7461" alt="" height="350px" width="100%">  </a>
+    <a href=" https://www.facebook.com/zubair.mahmud.5872/ " target="blank"> <img src="https://scontent.fcgp3-1.fna.fbcdn.net/v/t39.30808-6/269790683_619649315957115_2607910150669343931_n.jpg?_nc_cat=101&_nc_rgb565=1&ccb=1-5&_nc_sid=09cbfe&_nc_eui2=AeGHhAa92jRpRBvRLReOieQDXTk8CTvlDShdOTwJO-UNKJxOZUTV1rcz0l3RoiijpD2qCTszssNSTr_zA1kIknfJ&_nc_ohc=mzXeAU3z4VEAX9XsfWj&_nc_ht=scontent.fcgp3-1.fna&oh=00_AT8oLNt3Dj293M6rH_fCqcRPqlxUK5IwHCVqU8Ht6SRJRQ&oe=61E56321" alt="" height="350px" width="100%">  </a>
 
     <h4>Do you wanna see my favourite item?? Then click on item </h4> 
 
