--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
    
     <h1 style="text-align: center;" >Hi This is HTML + CSS Project </h1>
-
+    <br> 
+    <br>
+    
+    <h2>View This Project on GitHub</h2>
     
     <div class="chisty carddiv">
     <!--This is my partner section/div-->
