--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
    
-    <h1 style="text-align: center;" >Hi This is HTML + CSS Project </h1>
+    <h1 style="text-align: center;" >Hi This is HTML + CSS Project </h1> 
+    <br>
+    <br>
+    <h3>
+          Git Changes 
+    </h3>
 
     
     <div class="chisty carddiv">
